fix vertical align with flex

--- a/spec/src/App.styl
+++ b/spec/src/App.styl
@@ -1,6 +1,9 @@
 @import '@theatersoft/components'
 
 section
+    display flex
+    flex-flow row wrap
+    align-items center
     margin 1rem 2rem
     padding 3rem
     background-color theme-background-transparent
