--- a/src/icon/icon.styl
+++ b/src/icon/icon.styl
@@ -5,14 +5,13 @@
 :global
     .icon
         display inline-block
+        line-height 0
         svg
+            fill currentColor
             vertical-align middle
         &:not(.small) svg
             width 8rem
             height 8rem
-            //line-height h(8)
-
         &.small svg
             width 5rem
             height 5rem
-            //line-height h(5)
